# DiplomWork

./: .env.example.docker  .env.sample  .env.sample.docker  .gitignore  Dockerfile  README.md  SB1.postman_collection.json  ads.json  all.json  coverage.txt  docker-compose.yaml  feed.json  pyproject.toml  result_test.txt  users.json  userss.json  Презентация.odp
ads/: admin.py  models.py  paginators.py  serilazers.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_delete_feedback.py  0003_ad_is_active_ad_updated_at_alter_ad_created_at_and_more.py  0004_alter_ad_is_active_alter_ad_updated_at.py  0005_alter_ad_created_at.py  0006_alter_ad_created_at_alter_ad_is_active_and_more.py  0007_alter_ad_options.py  0008_remove_ad_is_active_remove_ad_updated_at.py  0009_alter_ad_description_alter_ad_price_alter_ad_title.py  0010_alter_ad_description.py  0011_alter_ad_price.py  0012_alter_ad_created_at.py
config/: settings.py  urls.py
feedbacks/: admin.py  apps.py  models.py  serilazers.py  temp.py  tests.py  urls.py  views.py
feedbacks/migrations/: 0001_initial.py  0002_alter_feedback_created_at_alter_feedback_text.py
users/: admin.py  apps.py  models.py  permissions.py  serilazers.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: csuser.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_alter_user_options_alter_user_email_alter_user_table.py  0003_alter_user_table.py  0003_user_uid.py
